articlse swagger documentation done
