# routes/articleRouter.js
@@ -22,5 +22,5 @@ router.get("/getArticleDaily", articleController.fetchDataDailyArticle);
 //  route to delete all articles
 router.post("/deleteAllArticles", articleController.deleteAllarticles);
 // GET /api/articles/:months
-router.post("/articles/months", articleController.getArticlesForMonths);
+router.post("/getArticlesForMonths", articleController.getArticlesForMonths);
 module.exports = router;
